--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
 		"vitest": "^2.0.4"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-free": "^6.7.1",
+		"@fortawesome/free-brands-svg-icons": "^6.7.1",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/typography": "^0.5.15"
 	}
