--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ on:
 env:
   NODE_VERSION: '18.x'
   AZURE_WEBAPP_NAME: tech-talk-augusta-bot
-  AZURE_WEBAPP_PACKAGE_PATH: './discord'  # Changed to discord directory
+  AZURE_WEBAPP_PACKAGE_PATH: './discord'
 
 jobs:
   build-and-deploy:
@@ -24,12 +24,12 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
-        cache-dependency-path: './discord/package-lock.json'
 
     - name: Install dependencies
       working-directory: ./discord
-      run: npm install
+      run: |
+        npm ci
+        npm run build --if-present
 
     - name: Zip artifact for deployment
       working-directory: ./discord
