--- a/discord/.gitignore
+++ b/discord/.gitignore
@@ -1,31 +1,40 @@
-# Environment variables
-.env
-.env.*
-!.env.example
-
 # Dependencies
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Build output
+dist/
+build/
+
+# IDE and editor files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Operating System
+.DS_Store
+Thumbs.db
+
+# Logs
+logs/
+*.log
+
 # Runtime data
-pids
+pids/
 *.pid
 *.seed
 *.pid.lock
 
-# Logs
-logs
-*.log
+# Optional npm cache directory
+.npm
 
-# IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-
-# System Files
-.DS_Store
-Thumbs.db 
+# Optional eslint cache
+.eslintcache 
