--- a/discord/package.json
+++ b/discord/package.json
@@ -12,7 +12,8 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "node-cron": "^3.0.3",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "axios": "^1.6.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
