--- a/discord/package.json
+++ b/discord/package.json
@@ -13,7 +13,8 @@
     "dotenv": "^16.4.5",
     "node-cron": "^3.0.3",
     "mongoose": "^8.2.0",
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
