--- a/discord/package.json
+++ b/discord/package.json
@@ -9,12 +9,12 @@
     "deploy:azure": "az webapp up --name tech-talk-augusta-bot --resource-group tech-talk-augusta --runtime \"NODE:18-lts\" --sku F1"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
-    "node-cron": "^3.0.3",
+    "express": "^4.21.2",
     "mongoose": "^8.2.0",
-    "axios": "^1.6.7",
-    "express": "^4.18.2"
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
@@ -22,4 +22,4 @@
   "engines": {
     "node": ">=18.0.0"
   }
-} 
+}
