--- a/discord/package.json
+++ b/discord/package.json
@@ -4,8 +4,8 @@
   "description": "Discord bot for Tech Talk Augusta",
   "main": "src/index.js",
   "scripts": {
-    "start": "node --max-old-space-size=512 src/index.js",
-    "dev": "nodemon --max-old-space-size=512 src/index.js"
+    "start": "NODE_ENV=production WEBSITES_PORT=8080 node --max-old-space-size=512 src/index.js",
+    "dev": "NODE_ENV=development node --max-old-space-size=512 src/index.js"
   },
   "engines": {
     "node": "20.x"
