--- a/discord/package.json
+++ b/discord/package.json
@@ -4,7 +4,7 @@
   "description": "Discord bot for Tech Talk Augusta",
   "main": "src/index.js",
   "scripts": {
-    "start": "NODE_ENV=production WEBSITES_PORT=8080 node --max-old-space-size=512 src/index.js",
+    "start": "node src/index.js",
     "dev": "NODE_ENV=development node --max-old-space-size=512 src/index.js"
   },
   "engines": {
