--- a/discord/package.json
+++ b/discord/package.json
@@ -11,6 +11,7 @@
     "node": "20.x"
   },
   "dependencies": {
+    "axios": "^1.8.3",
     "compression": "^1.7.4",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
