--- a/discord/package.json
+++ b/discord/package.json
@@ -16,7 +16,8 @@
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.7",
     "express": "^4.18.3",
-    "mongoose": "^8.2.1"
+    "mongoose": "^8.2.1",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
