--- a/discord/package.json
+++ b/discord/package.json
@@ -4,8 +4,8 @@
   "description": "Discord bot for Tech Talk Augusta",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "NODE_ENV=development node --max-old-space-size=512 src/index.js"
+    "start": "node --max-old-space-size=256 src/index.js",
+    "dev": "NODE_ENV=development node --max-old-space-size=256 src/index.js"
   },
   "engines": {
     "node": "20.x"
@@ -15,9 +15,7 @@
     "compression": "^1.7.4",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.7",
-    "express": "^4.18.3",
-    "mongoose": "^8.2.1",
-    "node-cron": "^3.0.3"
+    "express": "^4.18.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
