--- a/discord/package.json
+++ b/discord/package.json
@@ -14,10 +14,10 @@
     "axios": "^1.8.3",
     "compression": "^1.7.4",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.4.7",
     "express": "^4.18.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "dotenv": "^16.4.7"
   }
 }
