--- a/discord/package.json
+++ b/discord/package.json
@@ -14,11 +14,12 @@
     "axios": "^1.8.3",
     "compression": "^1.7.4",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.4.7",
     "express": "^4.18.3",
-    "mongoose": "^8.12.1"
+    "mongoose": "^8.12.1",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
+    "dotenv": "^16.4.7",
     "nodemon": "^3.1.0"
   }
 }
