yolo new website version

--- a/discord/.env.example
+++ b/discord/.env.example
@@ -1,16 +1,26 @@
-# Discord Bot Token (IMPORTANT: Replace this with your token from Discord Developer Portal)
-# To get your token:
-# 1. Go to https://discord.com/developers/applications
-# 2. Select your application
-# 3. Click "Bot" in the left sidebar
-# 4. Click "Reset Token" or "Copy" under the bot's username
-# 5. Paste your token below (keep the quotes!)
-DISCORD_TOKEN="your_discord_bot_token"
+# Discord Bot Configuration
+DISCORD_TOKEN=your_discord_bot_token
+DISCORD_CLIENT_ID=your_discord_client_id
+DISCORD_GUILD_ID=your_discord_guild_id
 
-# MongoDB Connection (Optional - for future database integration)
-MONGODB_URI="your_mongodb_connection_string"
+# Meetup.com Configuration
+MEETUP_API_KEY=your_meetup_api_key
+MEETUP_GROUP_ID=your_meetup_group_id
 
 # Eventbrite Configuration
-EVENTBRITE_TOKEN="your_eventbrite_private_token"
-EVENTBRITE_ORGANIZATION_ID="your_organization_id"
-EVENTBRITE_VENUE_ID="your_venue_id"  # Optional, for in-person events
+EVENTBRITE_API_KEY=your_eventbrite_api_key
+EVENTBRITE_ORGANIZATION_ID=your_eventbrite_organization_id
+
+# Facebook Configuration
+FACEBOOK_ACCESS_TOKEN=your_facebook_access_token
+FACEBOOK_PAGE_ID=your_facebook_page_id
+
+# MongoDB Configuration
+MONGODB_URI=mongodb://localhost:27017/techtalkaugusta
+
+# Logging Configuration
+LOG_LEVEL=info
+NODE_ENV=development
+
+# Server Configuration
+PORT=3000
