--- a/discord/package.json
+++ b/discord/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "tech-talk-augusta-bot",
+  "name": "techtalkaugusta-discord-bot",
   "version": "1.0.0",
-  "description": "Discord bot for Tech Talk Augusta",
+  "description": "Discord bot for Tech Talk Augusta community",
   "main": "src/index.js",
   "scripts": {
-    "start": "node --max-old-space-size=256 src/index.js",
-    "dev": "NODE_ENV=development node --max-old-space-size=256 src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "test": "jest",
+    "lint": "eslint ."
   },
   "engines": {
     "node": "20.x"
   },
   "dependencies": {
-    "axios": "^1.8.3",
-    "compression": "^1.7.4",
+    "axios": "^1.6.7",
     "discord.js": "^14.14.1",
-    "express": "^4.18.3",
-    "mongoose": "^8.12.1",
-    "node-cron": "^3.0.3"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.3",
+    "morgan": "^1.10.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "dotenv": "^16.4.7",
-    "nodemon": "^3.1.0"
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.11.19",
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.3"
   }
 }
